Iris: Fix architecture violations in the autonomous tutor thread DTOs
Move PyrisAuthorRole out of the pyris dto package, since it is a role
mapper rather than a DTO, and use Stream.toList() instead of
Collectors.toList().